Fixed z-index

--- a/css/style.css
+++ b/css/style.css
@@ -87,7 +87,7 @@ xtab-filter
   background-color: rgba(255, 255, 255, 0.85);
   box-shadow: 0 1px 1px rgba(0, 0, 0, 0.08);
   -webkit-backdrop-filter: blur(20px);
-  z-index: ;
+  z-index: 1;
 }
 .cd-tab-filter-wrapper:after {
   content: "";
